// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When running rsk in the command line class component should match the snapshot 1`] = `
"import React from \\"react\\";

class Potato extends React.Component {
  render() {
    return <div>Potato</div>;
  }
}

export default Potato;
"
`;

exports[`When running rsk in the command line setup store should match the snapshot 1`] = `
"
  import { createStore, compose, combineReducers, applyMiddleware } from \\"redux\\";
  import reducers from './ducks';

  const composeEnhancers = window.__REDUX_DEVTOOLS_EXTENSION_COMPOSE__ || compose;
  const rootReducer = combineReducers(reducers);

  const store = createStore(rootReducer, composeEnhancers(
      applyMiddleware(thunk)
  ));

  export default store;
"
`;

exports[`When running rsk in the command line stateless functional component should match the snapshot 1`] = `
"import React from \\"react\\";

const Potato = () => {
  return <div>Potato</div>;
};

export default Potato;
"
`;
